les petites modifications

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -48,7 +48,7 @@
                     <com.mikhaellopez.circularimageview.CircularImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@mipmap/ic_launcher"
+                        android:src="@drawable/imgdefault"
                         android:scaleType="centerCrop"
                         android:id="@+id/imgUser"
                         android:layout_centerInParent="true"
