--- a/app/src/main/res/layout/dialog_music_accueil.xml
+++ b/app/src/main/res/layout/dialog_music_accueil.xml
@@ -64,6 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_margin="@dimen/micro_petite_marge"
                     android:layout_gravity="center"
+                    android:clickable="false"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>
 
