--- a/app/src/main/res/layout/item_audio.xml
+++ b/app/src/main/res/layout/item_audio.xml
@@ -5,10 +5,10 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardImg"
-    app:cardCornerRadius="@dimen/petite_marge"
+    android:layout_margin="@dimen/micro_petite_marge"
     app:cardElevation="@dimen/tres_petite_marge"
-    app:cardMaxElevation="@dimen/petite_marge"
-    android:layout_margin="@dimen/tres_petite_marge">
+    app:cardCornerRadius="@dimen/micro_petite_marge"
+    app:cardMaxElevation="@dimen/petite_marge">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
                 android:id="@+id/imgUser"
                 app:civ_border_color="@color/colorbtn"
                 app:civ_border_width="1dp"
-                android:src="@mipmap/ic_launcher_round"/>
+                android:src="@drawable/imgdefault"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -98,7 +98,7 @@
                     android:id="@+id/fab"
                     android:src="@drawable/ic_play_circle_outline_black_24dp"
                     app:tint="@color/design_default_color_background"
-                    app:backgroundTint="@color/common_google_signin_btn_text_light_default"
+                    app:backgroundTint="@color/c5"
                     android:layout_centerInParent="true"/>
             </RelativeLayout>
 
@@ -107,25 +107,15 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:id="@+id/lineBottom"
-                android:orientation="horizontal"
-                android:background="@drawable/degrade_action">
+                android:orientation="horizontal">
                 <ImageButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/partager"
                     android:background="@android:color/transparent"
                     android:layout_gravity="center"
-                    android:tint="@color/colorBlanc"
+                    android:tint="@color/cardview_shadow_start_color"
                     android:src="@drawable/ic_reply_black_24dp"
-                    android:layout_weight="1"/>
-                <ImageButton
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/comment"
-                    android:background="@android:color/transparent"
-                    android:layout_gravity="center"
-                    android:visibility="gone"
-                    android:src="@drawable/ic_mode_comment_black_24dp"
                     android:layout_weight="1"/>
 
                 <LinearLayout
@@ -143,7 +133,7 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/ubuntu_mono_bold"
                         android:textAppearance="?android:textAppearance"
-                        android:textColor="@color/colorBlanc"/>
+                        android:textColor="@android:color/black"/>
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
