--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -5,10 +5,10 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardImg"
-    app:cardCornerRadius="@dimen/petite_marge"
+    android:layout_margin="@dimen/micro_petite_marge"
+    app:cardCornerRadius="@dimen/micro_petite_marge"
     app:cardElevation="@dimen/tres_petite_marge"
-    app:cardMaxElevation="@dimen/petite_marge"
-    android:layout_margin="@dimen/tres_petite_marge">
+    app:cardMaxElevation="@dimen/petite_marge">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
                 android:id="@+id/imgUser"
                 app:civ_border_color="@color/colorbtn"
                 app:civ_border_width="1dp"
-                android:src="@mipmap/ic_launcher_round"/>
+                android:src="@drawable/imgdefault"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -90,14 +90,13 @@
                 android:id="@+id/img"
                 android:layout_above="@id/lineBottom"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher_background"/>
+                android:src="@drawable/default_img"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:id="@+id/lineBottom"
-                android:background="@drawable/degrade_action"
                 android:layout_alignParentBottom="true">
                 <ImageButton
                     android:layout_width="match_parent"
@@ -105,7 +104,7 @@
                     android:id="@+id/partager"
                     android:background="@android:color/transparent"
                     android:layout_gravity="center"
-                    android:tint="@color/colorBlanc"
+                    android:tint="@color/cardview_shadow_start_color"
                     android:src="@drawable/ic_reply_black_24dp"
                     android:layout_weight="1"/>
 
@@ -123,7 +122,7 @@
                         android:id="@+id/txtLikes"
                         android:layout_gravity="center"
                         android:textAppearance="?android:textAppearance"
-                        android:textColor="@android:color/white"/>
+                        android:textColor="@android:color/black"/>
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
