--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -16,7 +16,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorFlouNoir">
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnModifier"
+            android:visibility="gone"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="@dimen/micro_petite_marge"
+            android:tint="@android:color/white"
+            android:src="@drawable/ic_mode_edit"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
