--- a/app/src/main/res/layout/activity_user_photo.xml
+++ b/app/src/main/res/layout/activity_user_photo.xml
@@ -20,11 +20,13 @@
         android:layout_width="@dimen/large_taille"
         android:layout_height="@dimen/large_taille"
         android:layout_centerInParent="true">
+
         <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/imgUser"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/imgdefault"
-            android:id="@+id/imgUser"/>
+            android:src="@drawable/imgdefault" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
