--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/lineLeft"
-    android:layout_margin="@dimen/tres_petite_marge"
+    android:layout_marginTop="@dimen/tres_petite_marge"
+    android:layout_marginBottom="@dimen/tres_petite_marge"
+    android:layout_marginLeft="@dimen/micro_petite_marge"
+    android:layout_marginRight="@dimen/petite_taille"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
@@ -23,7 +26,7 @@
             android:textColor="@color/colorBlanc"
             android:textAppearance="?android:textAppearance"
             android:fontFamily="@font/comfortaa_bold"
-            android:layout_marginStart="@dimen/tres_petite_marge"/>
+            android:layout_marginStart="@dimen/micro_petite_marge"/>
 
         <TextView
             android:layout_width="wrap_content"
