gestion de la taille des son a plubier . inferieur a 2 mega

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -48,6 +48,7 @@
                         android:textAppearance="?android:textAppearance"
                         android:fontFamily="@font/carter_one"
                         android:gravity="center"
+                        android:id="@+id/txtImg"
                         android:textSize="@dimen/tres_petite_police"
                         android:textAlignment="center"
                         android:textColor="@android:color/white"/>
@@ -74,6 +75,7 @@
                         android:textAppearance="?android:textAppearance"
                         android:fontFamily="@font/carter_one"
                         android:gravity="center"
+                        android:id="@+id/txtSong"
                         android:textSize="@dimen/tres_petite_police"
                         android:textAlignment="center"
                         android:textColor="@android:color/white"/>
