lecture des sons de la playList dans le profil de l'artist effectuer

--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -7,5 +7,5 @@
     <item
         android:id="@+id/two"
         android:icon="@drawable/ic_add_box_black_24dp"
-        android:title="Ajouter"/>
+        android:title="Ajouter mes images"/>
 </menu>
