--- a/app/src/main/res/layout/fragment_accueil.xml
+++ b/app/src/main/res/layout/fragment_accueil.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
+        android:background="@color/colorbaskSMS"
         android:id="@+id/nestedscrol">
 
         <LinearLayout
@@ -91,6 +92,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/white"
                 android:id="@+id/recycleActualite"/>
             <ProgressBar
                 android:layout_width="@dimen/tres_grande_marge"
