gestion du lecteur puis des intent profil to postMusic

--- a/app/src/main/res/layout/activity_post_music.xml
+++ b/app/src/main/res/layout/activity_post_music.xml
@@ -184,6 +184,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/nom_de_l_artiste"
+                android:visibility="gone"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
