--- a/app/src/main/res/layout/activity_lecteur.xml
+++ b/app/src/main/res/layout/activity_lecteur.xml
@@ -178,6 +178,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_margin="@dimen/petite_marge"
                 android:layout_gravity="center_horizontal">
 
                 <ImageButton
@@ -217,6 +218,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:id="@+id/lineBottom"
+            android:visibility="gone"
             android:layout_margin="@dimen/petite_marge"
             android:gravity="center">
             <ImageView
