--- a/app/src/main/res/menu/popup_menu_media.xml
+++ b/app/src/main/res/menu/popup_menu_media.xml
@@ -4,4 +4,8 @@
         android:id="@+id/one"
         android:icon="@drawable/ic_remove_red_eye_black_24dp"
         android:title="Tout voir" />
+    <item
+        android:id="@+id/two"
+        android:icon="@drawable/ic_remove_red_eye_black_24dp"
+        android:title="Ajouter une chanson" />
 </menu>
