--- a/app/src/main/res/layout/dialog_music_accueil.xml
+++ b/app/src/main/res/layout/dialog_music_accueil.xml
@@ -29,6 +29,11 @@
             android:layout_below="@id/imgCover"
             android:orientation="vertical">
 
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progress"
+                android:layout_gravity="center"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
