--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -149,6 +149,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/carter_one"
                         android:text="@string/abonn_s"
+                        android:textSize="9.5sp"
                         android:textAlignment="center"
                         android:textAppearance="?android:textAppearanceSmall" />
 
@@ -175,6 +176,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/carter_one"
                         android:text="@string/publications"
+                        android:textSize="9.5sp"
                         android:textAlignment="center"
                         android:textAppearance="?android:textAppearanceSmall" />
                 </LinearLayout>
@@ -200,6 +202,34 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/carter_one"
                         android:text="Abonnements"
+                        android:textSize="9.5sp"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:textAppearanceSmall" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:id="@+id/lineEcoute"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/comfortaa_bold"
+                        android:text="0"
+                        android:id="@+id/nbreEcoute"
+                        android:textStyle="bold"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:textAppearanceLarge" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/carter_one"
+                        android:text="Ecoutes"
+                        android:textSize="9.5sp"
                         android:textAlignment="center"
                         android:textAppearance="?android:textAppearanceSmall" />
 
