--- a/app/src/main/res/layout/sms_menu_layout.xml
+++ b/app/src/main/res/layout/sms_menu_layout.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/sms_icon"
+        android:src="@drawable/message_bulleted"
         android:layout_centerInParent="true"
         android:id="@+id/imgSMS" />
     <ImageView
